bundled_metadata/force-app/main/default/objects/Calculation_Schema_Step__c/Calculation_Schema_Step__c.object-meta.xml
<CustomObject>
    <label>Calculation Schema Step</label>
    <nameField>
        <label>CSS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculation Schema Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>