bundled_metadata/force-app/main/default/objects/Calculation_Schema_Step__c/fields/ReferenceSchemaId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceSchemaId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Calculation Schema</label>
    <referenceTo>Calculation_Schema__c</referenceTo>
    <relationshipLabel>Calculation Schema Steps</relationshipLabel>
    <relationshipName>Calculation_Schema_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>