bundled_metadata/force-app/main/default/objects/Calculation_Schema_Step__c/fields/RefSearchStrategyId__c.field-meta.xml
<CustomField>
    <fullName>RefSearchStrategyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Search Strategy</label>
    <referenceTo>Search_Strategy__c</referenceTo>
    <relationshipLabel>Calculation Schema Steps</relationshipLabel>
    <relationshipName>Calculation_Schema_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>