bundled_metadata/force-app/main/default/objects/Calculation_Schema_Step__c/fields/Search_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Search_Strategy__c</fullName>
    <inlineHelpText>Market + Name</inlineHelpText>
    <label>Search Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>